<resources>
    <string name="app_name">Study Zone</string>
    <string name="Admin">admin</string>«
    <string name="Teacher">teacher</string>«
    <string name="Student">student</string>«
    <string name="Guest">guest</string>«
    <string name="todo">todo</string>«
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="not_registered_yet_register_now">Not registered yet? Register now</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register_to_start_your_new_journey">Register to start your new Journey</string>
    <string name="welcome">Welcome</string>
    <string name="log_out">Log out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="send_email">Send Email</string>
    <string name="change_password_text">This is a security sensitive operation for that reason you are logged in then you are automatically signed out. A password reset email will sent to your mail if you fill the email session below and press the button.\n\nWant to sign in again?</string>
    <string name="post_hint">Start typing here to share something....</string>
    <string name="post">Post</string>
    <string name="notice_board">Notice Board</string>
    <string name="done">Done</string>
    <string name="rotate_to_view_in_full_screen">Rotate your mobile to adjust screen size or better performance.</string>
</resources>