<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <ImageView
            android:id="@+id/imageId"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/welcomeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageId"
            android:layout_marginTop="-20dp"
            android:fontFamily="@font/bungee"
            android:text="@string/hello_there_welcome_back"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/titleId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeId"
            android:layout_marginTop="-25dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/antic"
            android:text="@string/sign_in_to_continue"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEmailBatchId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleId"
            android:layout_marginBottom="4dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginActivityEmailID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPassBatchId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginEmailBatchId"
            android:layout_marginBottom="4dp"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password">

            <EditText
                android:id="@+id/loginActivityPasswordID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/loginActivityResetPasswordID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginPassBatchId"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:text="@string/forget_your_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/loginActivityLoginButtonID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginActivityResetPasswordID"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/log_in"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/loginActivityRegisterTextID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginActivityLoginButtonID"
            android:layout_marginTop="15dp"
            android:text="@string/not_registered_yet_register_now"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>