<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imageId"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/titleId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageId"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/antic"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/welcomeActivityLoginButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleId"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/log_in"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/welcomeActivityRegisterButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeActivityLoginButtonId"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/register"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>