<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <ImageView
            android:id="@+id/imageId"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/welcomeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageId"
            android:layout_marginTop="-20dp"
            android:fontFamily="@font/bungee"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/titleId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcomeId"
            android:layout_marginTop="-30dp"
            android:fontFamily="@font/antic"
            android:text="@string/register_to_start_your_new_journey"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerEmailBatchId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleId"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="4dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerActivityEmailID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerPassBatchId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerEmailBatchId"
            android:layout_marginBottom="4dp"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerActivityPasswordID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerConPassBatchId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerPassBatchId"
            android:layout_marginBottom="4dp"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerActivityConfirmPasswordID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerNameBatchId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerConPassBatchId"
            android:layout_marginBottom="4dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerActivityNameID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerPhoneBatchId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerNameBatchId"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:endIconMode="clear_text"
            app:prefixText="+88"
            app:startIconDrawable="@drawable/ic_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerActivityPhoneID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerActivityRegisterButtonID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerPhoneBatchId"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/register"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/registerActivityLoginTextID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerActivityRegisterButtonID"
            android:layout_marginTop="15dp"
            android:text="@string/already_have_an_account_log_in"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>