<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/application_nav_view_ID"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header_design"
        app:menu="@menu/home_drawer" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00008577"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:navigationIcon="@drawable/ic_menu"
                app:title="@string/app_name"
                app:titleTextColor="@color/comb_1" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/toolbar"
                android:background="@color/comb_1" />

            <ScrollView
                android:id="@+id/ScrollID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"
                android:layout_margin="3dp"
                android:background="@drawable/button_bg"
                android:padding="3dp"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/applicationPostEditTextID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/post_hint"
                    android:maxHeight="160dp"
                    android:textColor="@color/black" />

            </ScrollView>

            <Button
                android:id="@+id/applicationPostButtonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ScrollID"
                android:layout_margin="3dp"
                android:background="@drawable/button_bg"
                android:padding="3dp"
                android:text="@string/post"
                android:textColor="@color/white"
                android:visibility="visible" />

            <TextView
                android:id="@+id/division_bar_1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/applicationPostButtonID"
                android:layout_margin="3dp"
                android:background="#BFBEBE" />

            <TextView
                android:id="@+id/Heading_division_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/division_bar_1"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:fontFamily="monospace"
                android:text="@string/notice_board"
                android:textAlignment="center"
                android:textColor="@color/comb_1"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/division_bar"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/Heading_division_bar"
                android:layout_margin="3dp"
                android:background="#BFBEBE" />

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/division_bar"
                android:visibility="gone"
                tools:ignore="MissingConstraints" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/applicationRecyclerViewID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/progress_circular"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:padding="3dp" />

        </RelativeLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>